FINERACT-2437: Decrease the number of compilation warnings